[package]
name = "carrot_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
carrot_sdk = { git = "https://github.com/xeynyty/carrot_sdk" }
inmemory = { git = "https://github.com/xeynyty/inmemory" }
anyhow = "1.0.72"

[profile.release]
lto = true
